# bench

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bench.cpp.1258A3FB71AB3DE2.idx  bench.cpp.7642D0CC98BCC1DE.idx  bench.cpp.E3B808DF61DBBB87.idx
docs/: adding_technique.md  hardware.md  methodology.md
scripts/: run_all.sh
techniques/: CMakeLists.txt
techniques/branch_prediction/: CMakeLists.txt  README.md  bench.cpp
techniques/cache_priming/: CMakeLists.txt  README.md  bench.cpp
techniques/denormalized_lookup/: CMakeLists.txt  README.md  bench.cpp
techniques/false_sharing/: CMakeLists.txt  README.md  bench.cpp
techniques/slowpath_removal/: CMakeLists.txt  README.md  bench.cpp
techniques/small_data_lookup/: CMakeLists.txt  README.md  bench.cpp
techniques/string_view_vs_string/: CMakeLists.txt  README.md  bench.cpp
techniques/template_vs_branch/: CMakeLists.txt  README.md  bench.cpp
